<resources>
    <string name="app_name">Home Work Calculator</string>
    <string name="comma">,</string>
    <string name="equal_sign">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus_sign">+</string>
    <string name="sub_sign">-</string>
    <string name="mul_sign">×</string>
    <string name="div_sign">÷</string>
    <string name="erase_to_the_left_sign">⌫</string>
    <string name="key_clear">c</string>
    <string name="key_percent">%</string>
    <string name="setting_activity_name">Settings</string>
    <string name="title_close_icon">close</string>
    <string name="enable_dark_theme">Enable dark theme</string>
</resources>