<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="@dimen/guide_line_width"
        android:layout_height="@dimen/guide_line_height"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guide_line_begin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="@dimen/guide_line_width"
        android:layout_height="@dimen/guide_line_height"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guide_line_end" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/icon_settings"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_settings_24"
        app:iconTint="@color/orange"
        android:gravity="center_horizontal"
        app:iconPadding="@dimen/btn_padding_0"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calc_text_view"
        style="@style/CustomTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/result_text_view"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/content_start" />

    <TextView
        android:id="@+id/result_text_view"
        style="@style/CustomTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toStartOf="@id/content_start" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/erase_to_the_left"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toStartOf="@id/content_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/div_sign"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/div_sign"
        app:layout_constraintBottom_toTopOf="@+id/mul_sign"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintStart_toEndOf="@+id/key_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_percent"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_percent"
        app:layout_constraintBottom_toTopOf="@+id/key_nine"
        app:layout_constraintEnd_toStartOf="@+id/div_sign"
        app:layout_constraintStart_toEndOf="@+id/erase_to_the_left" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/erase_to_the_left"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/erase_to_the_left_sign"
        app:layout_constraintBottom_toTopOf="@+id/key_eight"
        app:layout_constraintEnd_toStartOf="@+id/key_percent"
        app:layout_constraintStart_toEndOf="@+id/key_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_clear"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_clear"
        app:layout_constraintBottom_toTopOf="@+id/key_seven"
        app:layout_constraintEnd_toStartOf="@id/erase_to_the_left"
        app:layout_constraintStart_toEndOf="@+id/content_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mul_sign"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mul_sign"
        app:layout_constraintBottom_toTopOf="@+id/sub_sign"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintStart_toEndOf="@+id/key_nine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_nine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/key_six"
        app:layout_constraintEnd_toStartOf="@+id/mul_sign"
        app:layout_constraintStart_toEndOf="@+id/key_eight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_eight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/key_five"
        app:layout_constraintEnd_toStartOf="@id/key_nine"
        app:layout_constraintStart_toEndOf="@+id/key_seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_seven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/key_four"
        app:layout_constraintEnd_toStartOf="@+id/key_eight"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/content_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sub_sign"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sub_sign"
        app:layout_constraintBottom_toTopOf="@+id/add_sign"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintStart_toEndOf="@+id/key_six" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_six"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/key_three"
        app:layout_constraintEnd_toStartOf="@+id/sub_sign"
        app:layout_constraintStart_toEndOf="@+id/key_five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/key_two"
        app:layout_constraintEnd_toStartOf="@id/key_six"
        app:layout_constraintStart_toEndOf="@+id/key_four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/key_one"
        app:layout_constraintEnd_toStartOf="@+id/key_five"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/content_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_sign"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin_medium"
        android:text="@string/plus_sign"
        app:layout_constraintBottom_toTopOf="@+id/key_equal"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintStart_toEndOf="@+id/key_three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/key_comma"
        app:layout_constraintEnd_toStartOf="@+id/add_sign"
        app:layout_constraintStart_toEndOf="@+id/key_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/key_comma"
        app:layout_constraintEnd_toStartOf="@id/key_three"
        app:layout_constraintStart_toEndOf="@+id/key_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/key_zero"
        app:layout_constraintEnd_toStartOf="@+id/key_two"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/content_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/empty_key"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_zero"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/content_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_zero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_comma"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/empty_key" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_comma"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_equal"
        app:layout_constraintStart_toStartOf="@+id/key_three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equal"
        style="@style/CustomButtonStyleSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin_medium"
        android:text="@string/equal_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintStart_toEndOf="@+id/key_comma" />

</androidx.constraintlayout.widget.ConstraintLayout>